--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,10 @@ a:hover {
   .icons {
     display: none;
   }
+
+  .test {
+    display: none;
+  }
 }
 
 @media (max-width: 600px) {
@@ -120,4 +124,9 @@ a:hover {
   /* .header-beer {
     display: none;
   } */
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
