--- a/src/components/Beers/SingleBeer/SingleBeer.css
+++ b/src/components/Beers/SingleBeer/SingleBeer.css
@@ -1,17 +1,22 @@
 .grid {
   color: var(--color);
-  background-color: var(--card-bg);
-  height: 100%;
+
+  /* background-color: var(--card-bg); */
+
+  /* height: 100%; */
   border-radius: 8px;
 
   /* box-shadow: 2px 2px 20px; */
 }
 
 .grid-beer {
-  color: var(--color);
-  background-color: var(--card-bg);
+  /* color: var(--color); */
+
+  /* background-color: var(--card-bg); */
+
   height: 100%;
-  border-radius: 8px;
+
+  /* border-radius: 8px; */
 
   /* box-shadow: 2px 2px 20px; */
 }
