--- a/src/components/Beers/SingleBeer/SingleBeer.css
+++ b/src/components/Beers/SingleBeer/SingleBeer.css
@@ -1,52 +1,25 @@
 .grid {
   color: var(--color);
+  background-color: var(--card-bg);
+  height: 100%;
+}
 
-  /* background-color: var(--card-bg); */
-
-  /* height: 100%; */
-  border-radius: 8px;
-
-  /* box-shadow: 2px 2px 20px; */
+.grid-shadow {
+  box-shadow: 2px 2px 20px;
 }
 
 .grid-beer {
-  /* color: var(--color); */
-
-  /* background-color: var(--card-bg); */
-
+  color: var(--color);
   height: 100%;
-
-  /* border-radius: 8px; */
-
-  /* box-shadow: 2px 2px 20px; */
 }
 
 .grid-beer:hover {
-  /* box-shadow: none; */
   box-shadow: 2px 2px 20px;
 }
 
 .beerItem {
   color: var(--card-bg);
 }
-
-/* .beer-animation {
-  position: relative;
-  animation: beer 6s infinite;
-  animation-direction: alternate-reverse;
-} */
-
-/* @keyframes beer {
-  0% {
-    left: 0;
-    top: 0;
-  }
-
-  100% {
-    left: calc(100vw - 220px);
-    top: 0;
-  }
-} */
 
 .center {
   display: flex;
